gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test19112.d
version https://git-lfs.github.com/spec/v1
oid sha256:61b932416b6c23b7122cbd3af970c7196a6c1f7e3063862d49a5e4f39fe6d76e
size 405
